Refactor code structure for improved readability and maintainability

--- a/about.html
+++ b/about.html
@@ -17,11 +17,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <span class="logo-icon"><i class="fas fa-brain"></i></span>
-                    <div class="logo-text">
-                        <span class="logo-name">NeuroKidz</span>
-                        <span class="logo-tagline">Child Neuro Care</span>
-                    </div>
+                    <img src="artifacts/logo.jpeg" alt="NeuroKidz - Child Neuro Care" class="logo-img">
                 </a>
                 <nav class="nav" id="nav">
                     <ul class="nav-list">
@@ -69,9 +65,7 @@
         <div class="container">
             <div class="about-intro">
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user-doctor"></i>
-                    </div>
+                    <img src="artifacts/jagveer photo 1.jpeg" alt="Dr. Jagveer Singh" class="doctor-photo">
                 </div>
                 <div class="about-text">
                     <h2>Pediatric Neurologist in Jaipur</h2>
