Update location details and outreach services in about and index pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="hero-card">
                         <div class="doctor-intro">
                             <div class="doctor-avatar">
-                                <i class="fas fa-user-md"></i>
+                                <img src="artifacts/jagveer photo 1.jpeg" alt="Dr. Jagveer Singh" class="doctor-photo-home">
                             </div>
                             <div class="doctor-info">
                                 <h3>Dr. Jagveer Singh</h3>
@@ -264,7 +264,7 @@
             <div class="locations-grid">
                 <div class="location-card primary">
                     <div class="location-badge">Main Practice</div>
-                    <h3><i class="fas fa-hospital"></i> Cradle Children Hospital</h3>
+                    <h3><i class="fas fa-hospital"></i> NeuroKidz Clinic</h3>
                     <p class="location-role">Senior Consultant - Pediatric Neurology</p>
                     <ul class="location-details">
                         <li><i class="fas fa-stethoscope"></i> Lead Pediatric Neurology Department</li>
@@ -273,12 +273,27 @@
                     <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
                 </div>
                 <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Saket Hospital</h3>
+                    <h3><i class="fas fa-hospital"></i> Cradle Children Hospital</h3>
                     <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
                     <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
                 </div>
                 <div class="location-card">
                     <h3><i class="fas fa-hospital"></i> Babylon Hospital</h3>
+                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
+                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
+                </div>
+                <div class="location-card">
+                    <h3><i class="fas fa-hospital"></i> Saket Hospital</h3>
+                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
+                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
+                </div>
+                <div class="location-card">
+                    <h3><i class="fas fa-hospital"></i> Garg Children Hospital</h3>
+                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
+                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
+                </div>
+                <div class="location-card">
+                    <h3><i class="fas fa-hospital"></i> Maharshi Children Hospital</h3>
                     <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
                     <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
                 </div>
@@ -288,20 +303,24 @@
                 <h3>Outreach OPD Services</h3>
                 <div class="outreach-grid">
                     <div class="outreach-card">
-                        <h4>Maitri Hospital, Kota</h4>
-                        <p><i class="fas fa-calendar"></i> Every 1st Thursday</p>
+                        <h4>KOTA</h4>
+                        <p>Maitri Hospital</p>
                     </div>
                     <div class="outreach-card">
-                        <h4>Veera Hospital, Tonk</h4>
-                        <p><i class="fas fa-calendar"></i> Every 2nd & 4th Sunday</p>
+                        <h4>TONK</h4>
+                        <p>Veera Hospital</p>
                     </div>
                     <div class="outreach-card">
-                        <h4>Agrawal Child Hospital, Beawar</h4>
-                        <p><i class="fas fa-calendar"></i> Every 3rd Thursday</p>
+                        <h4>SIKAR</h4>
+                        <p>Nihit Hospital<br>Swastik Hospital<br>Bachpan Hospital</p>
                     </div>
                     <div class="outreach-card">
-                        <h4>Jain Child ICU Hospital, Beawar</h4>
-                        <p><i class="fas fa-calendar"></i> Every 3rd Thursday</p>
+                        <h4>JHUNJHUNU</h4>
+                        <p>Sanjeevani Hospital</p>
+                    </div>
+                    <div class="outreach-card">
+                        <h4>BEAWAR</h4>
+                        <p>Agrawal Child Hospital<br>Jain Fertility and Child ICU Hospital</p>
                     </div>
                 </div>
             </div>
