Add doctor preview photo to the homepage

--- a/index.html
+++ b/index.html
@@ -246,9 +246,7 @@
                     <a href="about.html" class="btn btn-primary">Know More</a>
                 </div>
                 <div class="doctor-preview-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user-doctor"></i>
-                    </div>
+                    <img src="artifacts/jagveer photo 1.jpeg" alt="Dr. Jagveer Singh" class="doctor-preview-photo">
                 </div>
             </div>
         </div>
