--- a/about.html
+++ b/about.html
@@ -236,7 +236,7 @@
                 <div class="location-card primary">
                     <div class="location-badge">Main Practice</div>
                     <h3><i class="fas fa-hospital"></i> NeuroKidz Clinic</h3>
-                    <p class="location-role">Senior Consultant - Pediatric Neurology</p>
+                    <p class="location-role">Director and Incharge - Child Neurology Services</p>
                     <ul class="location-details">
                         <li><i class="fas fa-stethoscope"></i> Lead the Pediatric Neurology department, providing comprehensive care for epilepsy, developmental delay, and other neurological conditions in infants & children</li>
                         <li><i class="fas fa-wave-square"></i> Incharge of NeuroKidz Lab - performing EEG, Video EEG, BERA, NCV round the clock with full accuracy</li>
@@ -245,32 +245,8 @@
                 </div>
                 <div class="location-card">
                     <h3><i class="fas fa-hospital"></i> Cradle Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p>Conducts professional assessments and treatment planning for child and infant neurological issues as a visiting consultant.</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Babylon Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p>Provides expert evaluation and management of neurological disorders in infants & children during scheduled visits.</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Saket Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p>Conducts professional assessments and treatment planning for child and infant neurological issues as a visiting consultant.</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Garg Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p>Provides expert evaluation and management of neurological disorders in infants & children during scheduled visits.</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Maharshi Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p>Provides expert evaluation and management of neurological disorders in infants & children during scheduled visits.</p>
+                    <p class="location-role">Sr Consultant, Pediatric Neurology</p>
+                    <p>Conducts professional assessments and treatment planning for child and infant neurological issues as a Sr. Consultant.</p>
                     <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
                 </div>
             </div>
@@ -297,6 +273,10 @@
                     <div class="outreach-card">
                         <h4>BEAWAR</h4>
                         <p>Agrawal Child Hospital<br>Jain Fertility and Child ICU Hospital</p>
+                    </div>
+                    <div class="outreach-card">
+                        <h4>BHILWARA</h4>
+                        <p>Manav Seva Santhan</p>
                     </div>
                 </div>
             </div>
