--- a/contact.html
+++ b/contact.html
@@ -113,39 +113,7 @@
                         <i class="fas fa-hospital-alt"></i>
                         <div>
                             <h4>Cradle Children Hospital</h4>
-                            <p>Visiting Consultant - Pediatric Neurology</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-hospital-alt"></i>
-                        <div>
-                            <h4>Babylon Hospital</h4>
-                            <p>Visiting Consultant - Pediatric Neurology</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-hospital-alt"></i>
-                        <div>
-                            <h4>Saket Hospital</h4>
-                            <p>Visiting Consultant - Pediatric Neurology</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-hospital-alt"></i>
-                        <div>
-                            <h4>Garg Children Hospital</h4>
-                            <p>Visiting Consultant - Pediatric Neurology</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-hospital-alt"></i>
-                        <div>
-                            <h4>Maharshi Children Hospital</h4>
-                            <p>Visiting Consultant - Pediatric Neurology</p>
+                            <p>Sr Consultant, Pediatric Neurology</p>
                         </div>
                     </div>
                 </div>
@@ -199,10 +167,6 @@
                             <select id="preferred-location" name="preferred-location">
                                 <option value="neurokidz">NeuroKidz Clinic, Jaipur</option>
                                 <option value="cradle">Cradle Children Hospital, Jaipur</option>
-                                <option value="saket">Saket Hospital, Jaipur</option>
-                                <option value="babylon">Babylon Hospital, Jaipur</option>
-                                <option value="garg">Garg Children Hospital, Jaipur</option>
-                                <option value="maharshi">Maharshi Children Hospital, Jaipur</option>
                                 <option value="kota">Maitri Hospital, Kota</option>
                                 <option value="tonk">Veera Hospital, Tonk</option>
                                 <option value="sikar-nihit">Nihit Hospital, Sikar</option>
@@ -242,6 +206,10 @@
                     <div class="outreach-card">
                         <h4>BEAWAR</h4>
                         <p>Agrawal Child Hospital<br>Jain Fertility and Child ICU Hospital</p>
+                    </div>
+                    <div class="outreach-card">
+                        <h4>BHILWARA</h4>
+                        <p>Manav Seva Santhan</p>
                     </div>
                 </div>
             </div>
