--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <div class="location-card primary">
                     <div class="location-badge">Main Practice</div>
                     <h3><i class="fas fa-hospital"></i> NeuroKidz Clinic</h3>
-                    <p class="location-role">Senior Consultant - Pediatric Neurology</p>
+                    <p class="location-role">Director and Incharge - Child Neurology Services</p>
                     <ul class="location-details">
                         <li><i class="fas fa-stethoscope"></i> Lead Pediatric Neurology Department</li>
                         <li><i class="fas fa-wave-square"></i> NeuroKidz Lab: EEG, Video EEG, BERA, NCV</li>
@@ -272,27 +272,7 @@
                 </div>
                 <div class="location-card">
                     <h3><i class="fas fa-hospital"></i> Cradle Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Babylon Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Saket Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Garg Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
-                    <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
-                </div>
-                <div class="location-card">
-                    <h3><i class="fas fa-hospital"></i> Maharshi Children Hospital</h3>
-                    <p class="location-role">Visiting Consultant - Pediatric Neurology</p>
+                    <p class="location-role">Sr Consultant, Pediatric Neurology</p>
                     <p class="location-city"><i class="fas fa-map-marker-alt"></i> Jaipur</p>
                 </div>
             </div>
@@ -319,6 +299,10 @@
                     <div class="outreach-card">
                         <h4>BEAWAR</h4>
                         <p>Agrawal Child Hospital<br>Jain Fertility and Child ICU Hospital</p>
+                    </div>
+                    <div class="outreach-card">
+                        <h4>BHILWARA</h4>
+                        <p>Manav Seva Santhan</p>
                     </div>
                 </div>
             </div>
