Add educational and professional images to the about page and style updates for better presentation

--- a/about.html
+++ b/about.html
@@ -92,6 +92,7 @@
                         <h3>Medical School (MBBS)</h3>
                         <h4>Dr. Sampurananand Medical College (SNMC), Jodhpur</h4>
                         <p>Completed his Medical School education with a strong foundation in medicine.</p>
+                        <img src="artifacts/mbbs.png" alt="Dr. Sampurananand Medical College, Jodhpur">
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -100,6 +101,7 @@
                         <h3>M.D. Pediatrics</h3>
                         <h4>Regional Maternal & Child Health Institute, Ummed Hospital, Dr. S.N. Medical College, Jodhpur</h4>
                         <p>Completed his Masters Degree in Pediatrics with comprehensive training in child healthcare.</p>
+                        <img src="artifacts/MD.png" alt="Dr. S.N. Medical College, Jodhpur">
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -108,6 +110,7 @@
                         <h3>Senior Residency</h3>
                         <h4>Bhagwan Mahavir Hospital, New Delhi</h4>
                         <p>Gained extensive clinical experience during senior residency in the national capital.</p>
+                        <img src="artifacts/mahavir hospital.png" alt="Bhagwan Mahavir Hospital, New Delhi">
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -116,6 +119,7 @@
                         <h3>Associate Consultant - Pediatrics</h3>
                         <h4>B.L. Kapoor Memorial Superspeciality Hospital, New Delhi</h4>
                         <p>Worked as Associate Consultant providing specialized pediatric care.</p>
+                        <img src="artifacts/BLK Hospital.png" alt="B.L. Kapoor Memorial Superspeciality Hospital, New Delhi">
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -124,6 +128,7 @@
                         <h3>Fellow in Pediatric Neurology</h3>
                         <h4>MEDANTA, The Medicity, Gurugram</h4>
                         <p>Gained specialized Child Neurology expertise under mentorship of Dr. Pratibha Singhi (President, International Child Neurology Association) in managing pediatric neurological disorders.</p>
+                        <img src="artifacts/Medanta.png" alt="MEDANTA, The Medicity, Gurugram">
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -132,6 +137,7 @@
                         <h3>Pediatric Epilepsy Training (PET)</h3>
                         <h4>British Pediatric Neurology Association, 2023</h4>
                         <p>Advanced training in pediatric epilepsy management from UK's leading institution.</p>
+                        <img src="artifacts/PET.png" alt="British Pediatric Neurology Association - PET">
                     </div>
                 </div>
             </div>
