Update contact form action and add hidden fields for appointment requests

--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,11 @@
                 <!-- Contact Form -->
                 <div class="contact-form">
                     <h3>Send a Message</h3>
-                    <form action="#" method="POST">
+                    <form action="https://formsubmit.co/neurokidzdrjagveer@gmail.com" method="POST">
+                        <input type="hidden" name="_captcha" value="true">
+                        <input type="hidden" name="_subject" value="New Appointment Request - NeuroKidz">
+                        <input type="hidden" name="_next" value="https://drjagveer.com/contact.html">
+                        <input type="text" name="_honey" style="display:none">
                         <div class="form-group">
                             <label for="child-name">Child Name *</label>
                             <input type="text" id="child-name" name="child-name" required>
